feat: 🎸 fixed rpc going to sleep after some time

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "Grim",
   "license": "ISC",
   "dependencies": {
-    "@truffle/hdwallet-provider": "^2.0.2",
+    "@truffle/hdwallet-provider": "2.0.0",
     "dotenv": "^15.0.0",
     "git-cz": "^4.8.0"
   },
